添加今日头条适配方案

--- a/github/build.gradle
+++ b/github/build.gradle
@@ -54,6 +54,11 @@ android {
         enabled = true
     }
 
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
+
 
 }
 
