--- a/github/src/main/AndroidManifest.xml
+++ b/github/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
         package="cn.luozhanming.github">
 
     <application>
-        <activity android:name=".GithubMainActivity">
+        <activity android:name=".ui.GithubMainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
