--- a/github/build.gradle
+++ b/github/build.gradle
@@ -24,9 +24,7 @@ android {
 
         Properties properties = new Properties()
         properties.load(project.rootProject.file("local.properties").newDataInputStream())
-        buildConfigField "String", "CLIENT_ID", properties.getProperty("CLIENT_ID")
-        buildConfigField "String", "CLIENT_SECRET", properties.getProperty("CLIENT_SECRET")
-        buildConfigField "String", "ACCESS_TOKEN", properties.getProperty("ACCESS_TOKEN")
+        buildConfigField "int", "ACCESS_TOKEN", properties.getProperty("ACCESS_TOKEN")
 
 
     }
@@ -65,6 +63,15 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':library')
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
     kapt deps.dagger_compiler
     kapt deps.dagger_android_compiler
 }
