--- a/github/src/main/runalone/AndroidManifest.xml
+++ b/github/src/main/runalone/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+            android:networkSecurityConfig="@xml/net_work_security_config"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.GithubMainActivity" android:screenOrientation="portrait">
             <intent-filter>
