--- a/github/build.gradle
+++ b/github/build.gradle
@@ -8,15 +8,15 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion complie_sdk_version
 
     defaultConfig {
         //library不能有applicationId
         if (isGithubApp) {
             applicationId "cn.luozhanming.github"
         }
-        minSdkVersion 15
-        targetSdkVersion 28
+        minSdkVersion min_sdk_version
+        targetSdkVersion target_sdk_version
         versionCode 1
         versionName "1.0"
 
