--- a/github/src/main/runalone/AndroidManifest.xml
+++ b/github/src/main/runalone/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
             android:networkSecurityConfig="@xml/net_work_security_config"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.GithubMainActivity" android:screenOrientation="portrait">
+        <activity android:name=".ui.start.GithubStartActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.login.OAuthWebActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".ui.start.OAuthWebActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
