--- a/github/src/main/runalone/AndroidManifest.xml
+++ b/github/src/main/runalone/AndroidManifest.xml
@@ -22,6 +22,8 @@
         </activity>
 
         <activity android:name=".ui.start.OAuthWebActivity" android:screenOrientation="portrait"/>
+
+        <activity android:name=".ui.main.GithubMainActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
