--- a/github/build.gradle
+++ b/github/build.gradle
@@ -3,6 +3,7 @@ if (isGithubApp) {
 } else {
     apply plugin: 'com.android.library'
 }
+apply plugin: 'com.apollographql.android'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
@@ -32,6 +33,13 @@ android {
         buildConfigField "String","CLIENT_SECRET","\"$clientSecret\""
 
 
+        multiDexEnabled true
+
+
+    }
+
+    apollo {
+        generateKotlinModels = true // or false
     }
 
     sourceSets {
@@ -70,13 +78,8 @@ dependencies {
     implementation project(path: ':library')
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.navigation:navigation-fragment:2.0.0'
-    implementation 'androidx.navigation:navigation-ui:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.0.0'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
+    implementation deps.apollo
+    implementation deps.apollo_rxjava2
     kapt deps.dagger_compiler
     kapt deps.dagger_android_compiler
 }
