成功接通Github Graphql api

--- a/github/build.gradle
+++ b/github/build.gradle
@@ -39,7 +39,7 @@ android {
     }
 
     apollo {
-        generateKotlinModels = true // or false
+        generateKotlinModels = false // or false
     }
 
     sourceSets {
